--- a/RuleBased.ipynb
+++ b/RuleBased.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOzKjYRcfp93vDPdXr6I06o",
+      "authorship_tag": "ABX9TyPPbkPVicCPHwKjvfZBif5l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "source": [
+        "!git clone https://github.com/E-tech-coder/DataScienceCapstoneProject.git"
+      ],
+      "metadata": {
+        "id": "6GybLtKFsrf9",
+        "outputId": "6e637d6d-2a1a-43fd-a0db-dccde019e1dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'DataScienceCapstoneProject'...\n",
+            "remote: Enumerating objects: 28, done.\u001b[K\n",
+            "remote: Counting objects: 100% (28/28), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (28/28), done.\u001b[K\n",
+            "remote: Total 28 (delta 13), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (28/28), 455.95 KiB | 2.60 MiB/s, done.\n",
+            "Resolving deltas: 100% (13/13), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "id": "JfWQb6pqP9sY"
       },
@@ -52,7 +81,7 @@
           "height": 676
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -603,18 +632,6 @@
     {
       "cell_type": "code",
       "source": [
-        "BOW = dict()\n",
-        "BOW[\"Marketing\"] = \"director\""
-      ],
-      "metadata": {
-        "id": "vGiXGadVWnOD"
-      },
-      "execution_count": 29,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "BOW"
       ],
       "metadata": {
@@ -624,7 +641,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -646,7 +663,7 @@
       "metadata": {
         "id": "F-I1bj_acJjJ"
       },
-      "execution_count": 40,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -656,13 +673,13 @@
       ],
       "metadata": {
         "id": "EdygaMeFdDRv",
-        "outputId": "866c176a-36cc-4bfe-ed44-e9b1f3ddb09c",
+        "outputId": "284c4516-5bc8-4114-8f9f-6a8b9d8f11c8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 429
         }
       },
-      "execution_count": 48,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -754,123 +771,29 @@
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 5
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
         "BOW = dict()\n",
         "\n",
         "for label in dpt['label'].drop_duplicates() :\n",
         "  x = []\n",
-        "  for item in dpt[dpt[\"label\"] == label][\"text\"].str.split(\" \") :\n",
-        "    x.extend(item)\n",
+        "  for text in dpt[dpt[\"label\"] == label][\"text\"]:\n",
+        "    tokens = re.split(r\"[ /&-]\", text.lower().strip())\n",
+        "    x.extend(tokens)\n",
         "    x = list(dict.fromkeys(x))\n",
         "  BOW[label] = x\n"
       ],
       "metadata": {
         "id": "gAFUjLZodYqR"
       },
-      "execution_count": 59,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "len(BOW.get(\"Customer Support\"))"
-      ],
-      "metadata": {
-        "id": "tqrxkZSHcwSJ",
-        "outputId": "54f30efe-5e3a-45b9-e86c-5c64cd7c2c66",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 70,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "81"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 70
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "for key in BOW.keys():\n",
-        "  for word in str(\"Infrastructure Administrator II\").split(\" \")"
-      ],
-      "metadata": {
-        "id": "lB61h8S4icMv",
-        "outputId": "73668d2c-471d-477b-ecef-3bf23dd018ef",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 72,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Marketing\n",
-            "Project Management\n",
-            "Administrative\n",
-            "Business Development\n",
-            "Consulting\n",
-            "Human Resources\n",
-            "Information Technology\n",
-            "Other\n",
-            "Purchasing\n",
-            "Sales\n",
-            "Customer Support\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "for word in str(\"Infrastructure Administrator II\").split(\" \"):\n",
-        "  print(word)"
-      ],
-      "metadata": {
-        "id": "pvS0z1kti-9C",
-        "outputId": "25006509-7726-4dd2-fe0a-6e8e68a0ab6c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 73,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Infrastructure\n",
-            "Administrator\n",
-            "II\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "BOW.get(\"Project Management\")"
-      ],
-      "metadata": {
-        "id": "CfLWzg2WjP0r"
-      },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -890,7 +813,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -908,12 +831,12 @@
       "source": [
         "df[\"WordAppearance\"] = 0\n",
         "df[\"PredictedPosition_BOW\"] =\"\"\n",
-        "df[\"position_words\"] = df[\"position\"].str.split()"
+        "df[\"position_words\"] = df[\"position\"].apply(lambda x : re.split(r\"[ /&-]\", x.lower().strip()))"
       ],
       "metadata": {
         "id": "gS3j77cTnxIZ"
       },
-      "execution_count": 91,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -927,25 +850,23 @@
         "        # Update prediction if the current word count is greater than the previous one\n",
         "    if count > df.at[idx, \"WordAppearance\"] :\n",
         "      df.at[idx, \"WordAppearance\"] = count\n",
-        "      df.at[idx, \"PredictedPosition_BOW\"] = label\n",
-        "\n",
-        ""
+        "      df.at[idx, \"PredictedPosition_BOW\"] = label"
       ],
       "metadata": {
         "id": "C4_z6wcwj1-X"
       },
-      "execution_count": 96,
+      "execution_count": 36,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "df.to_csv(\"/content/DataScienceCapstoneProject/BOW-Position-Predict.csv\")"
+        "df.to_csv(\"/content/DataScienceCapstoneProject/2BOW-Position-Predict.csv\")"
       ],
       "metadata": {
         "id": "8GuDnXJSlmPz"
       },
-      "execution_count": 98,
+      "execution_count": 38,
       "outputs": []
     },
     {
