--- a/RuleBased.ipynb
+++ b/RuleBased.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPbkPVicCPHwKjvfZBif5l",
+      "authorship_tag": "ABX9TyOJ0zSyWyiEc5Sbr3+UKWW0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,31 +33,31 @@
       ],
       "metadata": {
         "id": "6GybLtKFsrf9",
-        "outputId": "6e637d6d-2a1a-43fd-a0db-dccde019e1dc",
+        "outputId": "5b2bdc84-7746-442f-9b2a-59cdfddf9160",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'DataScienceCapstoneProject'...\n",
-            "remote: Enumerating objects: 28, done.\u001b[K\n",
-            "remote: Counting objects: 100% (28/28), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (28/28), done.\u001b[K\n",
-            "remote: Total 28 (delta 13), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (28/28), 455.95 KiB | 2.60 MiB/s, done.\n",
-            "Resolving deltas: 100% (13/13), done.\n"
+            "remote: Enumerating objects: 31, done.\u001b[K\n",
+            "remote: Counting objects: 100% (31/31), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (31/31), done.\u001b[K\n",
+            "remote: Total 31 (delta 15), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (31/31), 456.85 KiB | 5.02 MiB/s, done.\n",
+            "Resolving deltas: 100% (15/15), done.\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "JfWQb6pqP9sY"
       },
@@ -75,13 +75,13 @@
       ],
       "metadata": {
         "id": "9oZ79apAWmQG",
-        "outputId": "ab0ff374-938d-4085-af01-40c6355422cc",
+        "outputId": "531f598f-d7f5-4a1c-d33e-01af37265e41",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 676
+          "height": 1000
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -155,7 +155,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-49222c8a-c87c-4e72-91aa-e34da4ce2187\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c2b69f99-6949-4042-9a68-20a3ebf2c28b\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -411,7 +411,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-49222c8a-c87c-4e72-91aa-e34da4ce2187')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c2b69f99-6949-4042-9a68-20a3ebf2c28b')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -463,12 +463,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-49222c8a-c87c-4e72-91aa-e34da4ce2187 button.colab-df-convert');\n",
+              "        document.querySelector('#df-c2b69f99-6949-4042-9a68-20a3ebf2c28b button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-49222c8a-c87c-4e72-91aa-e34da4ce2187');\n",
+              "        const element = document.querySelector('#df-c2b69f99-6949-4042-9a68-20a3ebf2c28b');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -488,8 +488,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-e6aeb976-8ddf-4dc7-ab7b-4182c2745ec3\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e6aeb976-8ddf-4dc7-ab7b-4182c2745ec3')\"\n",
+              "    <div id=\"df-a5f332dc-e594-4f47-aa9f-c6456b2f6dac\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a5f332dc-e594-4f47-aa9f-c6456b2f6dac')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -608,7 +608,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-e6aeb976-8ddf-4dc7-ab7b-4182c2745ec3 button');\n",
+              "            document.querySelector('#df-a5f332dc-e594-4f47-aa9f-c6456b2f6dac button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -625,33 +625,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 28
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "BOW"
-      ],
-      "metadata": {
-        "id": "Ft3w3L1Jb_dk",
-        "outputId": "50c92ce9-7bab-49bb-8d95-076daa32af82",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'Marketing': 'director'}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 30
+          "execution_count": 3
         }
       ]
     },
@@ -663,7 +637,7 @@
       "metadata": {
         "id": "F-I1bj_acJjJ"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -673,13 +647,13 @@
       ],
       "metadata": {
         "id": "EdygaMeFdDRv",
-        "outputId": "284c4516-5bc8-4114-8f9f-6a8b9d8f11c8",
+        "outputId": "3e3d6d3b-a264-4800-b980-00eeea8ae5d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 429
         }
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -771,7 +745,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -785,44 +759,44 @@
         "for label in dpt['label'].drop_duplicates() :\n",
         "  x = []\n",
         "  for text in dpt[dpt[\"label\"] == label][\"text\"]:\n",
-        "    tokens = re.split(r\"[ /&-]\", text.lower().strip())\n",
+        "    tokens = re.split(r\"[ ./&-()|-]\", text.lower().strip())\n",
+        "    tokens = [t for t in tokens if t]\n",
         "    x.extend(tokens)\n",
-        "    x = list(dict.fromkeys(x))\n",
-        "  BOW[label] = x\n"
+        "  BOW[label] = list(set(x))\n"
       ],
       "metadata": {
         "id": "gAFUjLZodYqR"
       },
-      "execution_count": 28,
+      "execution_count": 55,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "i = 0\n",
-        "for word in str(\"Infrastructure Administrator II\").split(\" \"):\n",
-        "  if word in BOW.get(\"Information Technology\"):\n",
-        "    print(word)\n",
-        "    i+=1\n",
-        "print(i)"
+        "label"
       ],
       "metadata": {
-        "id": "msUjXHtJjbp-",
-        "outputId": "49a779ea-d5cd-46d1-a281-abf3584ecd20",
+        "id": "Ih0RkqHJz58j",
+        "outputId": "5f58ced4-7bb8-4105-e018-a66742f87ef9",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 36
         }
       },
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Infrastructure\n",
-            "Administrator\n",
-            "2\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Customer Support'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 57
         }
       ]
     },
@@ -836,7 +810,7 @@
       "metadata": {
         "id": "gS3j77cTnxIZ"
       },
-      "execution_count": 34,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -855,7 +829,7 @@
       "metadata": {
         "id": "C4_z6wcwj1-X"
       },
-      "execution_count": 36,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -866,14 +840,136 @@
       "metadata": {
         "id": "8GuDnXJSlmPz"
       },
-      "execution_count": 38,
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# The performance using only bag of words for classification is very terrible.\n",
+        "# Let's try TFIDF method."
+      ],
+      "metadata": {
+        "id": "L2yifWLslpuX"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "corpus = []\n",
+        "labels = []\n",
+        "\n",
+        "for key, value in BOW.items():\n",
+        "  labels.append(key)\n",
+        "  corpus.append(value)\n"
+      ],
+      "metadata": {
+        "id": "Bs8CViUWyGSF"
+      },
+      "execution_count": 58,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(corpus)"
+      ],
+      "metadata": {
+        "id": "ZcSy-0Ibyou5",
+        "outputId": "e8b7e8f2-e019-4d52-83da-b3035aed2a01",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "corpus = [\" \".join(doc) for doc in corpus]\n",
+        "titles = labels\n",
+        "\n",
+        "vectorizer = TfidfVectorizer()\n",
+        "vector = vectorizer.fit_transform(corpus)"
+      ],
+      "metadata": {
+        "id": "yPQCU88QwmHr"
+      },
+      "execution_count": 63,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict(zip(vectorizer.get_feature_names_out(), vector.toarray()[0]))"
+      ],
+      "metadata": {
+        "id": "L1RB3EZu2hVc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tfidf_df = pd.DataFrame(vector.toarray(), index = titles, columns = vectorizer.get_feature_names_out())"
+      ],
+      "metadata": {
+        "id": "sd2pU7gR3gYH"
+      },
+      "execution_count": 70,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tfidf_df.iloc[:, 50:80]"
+      ],
+      "metadata": {
+        "id": "_hub49R64RDc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# for label, BOW_words in BOW.items():\n",
+        "#   bow_set = set(BOW_words)\n",
+        "#   # Count how many words of the position appear in the bag of words of the label\n",
+        "#   for idx,words in df[\"position_words\"].items():\n",
+        "#     count=sum(word in bow_set for word in words)\n",
+        "#         # Update prediction if the current word count is greater than the previous one\n",
+        "#     if count > df.at[idx, \"WordAppearance\"] :\n",
+        "#       df.at[idx, \"WordAppearance\"] = count\n",
+        "#       df.at[idx, \"PredictedPosition_BOW\"] = label"
+      ],
+      "metadata": {
+        "id": "QFap7jlZ4Tg6"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "L2yifWLslpuX"
+        "id": "Jsvf_hi247Fc"
       },
       "execution_count": null,
       "outputs": []
