--- a/RuleBased.ipynb
+++ b/RuleBased.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOE5ifhjLjClRF5ropNnBfx",
+      "authorship_tag": "ABX9TyOE32Peax9K8Mrccf+9LwUy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,12 +33,12 @@
       ],
       "metadata": {
         "id": "6GybLtKFsrf9",
-        "outputId": "f060e397-5eb9-4b7c-c74a-ec92348c1f5c",
+        "outputId": "1a15a0f5-8f17-4ff8-cdbc-7d6ec8e599d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 75,
+      "execution_count": 216,
       "outputs": [
         {
           "output_type": "stream",
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 217,
       "metadata": {
         "id": "JfWQb6pqP9sY"
       },
@@ -69,13 +69,13 @@
       ],
       "metadata": {
         "id": "9oZ79apAWmQG",
-        "outputId": "a683c497-c802-437f-8571-67c5f15b7598",
+        "outputId": "2086df0e-7f30-4e0f-e960-9c305bb9ec19",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 867
         }
       },
-      "execution_count": 77,
+      "execution_count": 218,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -149,7 +149,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-dc2ba94c-2068-4e79-8ef1-b0813f90a41c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c88d1c76-bc1d-4f01-bc1a-eb3f051d39b4\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -405,7 +405,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dc2ba94c-2068-4e79-8ef1-b0813f90a41c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c88d1c76-bc1d-4f01-bc1a-eb3f051d39b4')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -457,12 +457,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-dc2ba94c-2068-4e79-8ef1-b0813f90a41c button.colab-df-convert');\n",
+              "        document.querySelector('#df-c88d1c76-bc1d-4f01-bc1a-eb3f051d39b4 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-dc2ba94c-2068-4e79-8ef1-b0813f90a41c');\n",
+              "        const element = document.querySelector('#df-c88d1c76-bc1d-4f01-bc1a-eb3f051d39b4');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -482,8 +482,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-c63e7923-8d1f-422d-859d-4ebeff833c32\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c63e7923-8d1f-422d-859d-4ebeff833c32')\"\n",
+              "    <div id=\"df-2d3a78f1-2513-43fb-ac8d-2ad3d6edb24d\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2d3a78f1-2513-43fb-ac8d-2ad3d6edb24d')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -602,7 +602,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-c63e7923-8d1f-422d-859d-4ebeff833c32 button');\n",
+              "            document.querySelector('#df-2d3a78f1-2513-43fb-ac8d-2ad3d6edb24d button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -619,7 +619,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 77
+          "execution_count": 218
         }
       ]
     },
@@ -631,7 +631,7 @@
       "metadata": {
         "id": "F-I1bj_acJjJ"
       },
-      "execution_count": 78,
+      "execution_count": 219,
       "outputs": []
     },
     {
@@ -641,13 +641,13 @@
       ],
       "metadata": {
         "id": "EdygaMeFdDRv",
-        "outputId": "41bcdb7d-bdb9-4885-f491-f3c00faaa323",
+        "outputId": "f5188265-47c7-44c7-b00d-3410cb8fe98f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 429
         }
       },
-      "execution_count": 79,
+      "execution_count": 220,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -739,7 +739,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 79
+          "execution_count": 220
         }
       ]
     },
@@ -761,7 +761,7 @@
       "metadata": {
         "id": "gAFUjLZodYqR"
       },
-      "execution_count": 80,
+      "execution_count": 221,
       "outputs": []
     },
     {
@@ -775,9 +775,9 @@
           "height": 36
         },
         "id": "Ih0RkqHJz58j",
-        "outputId": "78683c99-20a4-41ae-a9d1-7b1dca5fe7e8"
+        "outputId": "15a272c2-5993-4729-ebde-3dcf176a6598"
       },
-      "execution_count": 81,
+      "execution_count": 222,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -790,7 +790,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 81
+          "execution_count": 222
         }
       ]
     },
@@ -803,7 +803,7 @@
       "metadata": {
         "id": "gS3j77cTnxIZ"
       },
-      "execution_count": 82,
+      "execution_count": 223,
       "outputs": []
     },
     {
@@ -821,7 +821,7 @@
       "metadata": {
         "id": "pDvT9YlHfWYz"
       },
-      "execution_count": 173,
+      "execution_count": 224,
       "outputs": []
     },
     {
@@ -832,7 +832,7 @@
       "metadata": {
         "id": "RlQCeYEfUNr3"
       },
-      "execution_count": 174,
+      "execution_count": 225,
       "outputs": []
     },
     {
@@ -842,13 +842,13 @@
       ],
       "metadata": {
         "id": "H6HLk2HnUPVg",
-        "outputId": "4caf2a11-b4a8-4d6e-f84f-48dddb8fddab",
+        "outputId": "dd4d0d97-1f9a-4a76-a889-3001a32b4b54",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 458
         }
       },
-      "execution_count": 175,
+      "execution_count": 226,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -941,7 +941,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 175
+          "execution_count": 226
         }
       ]
     },
@@ -961,7 +961,7 @@
       "metadata": {
         "id": "C4_z6wcwj1-X"
       },
-      "execution_count": 214,
+      "execution_count": 227,
       "outputs": []
     },
     {
@@ -972,7 +972,7 @@
       "metadata": {
         "id": "8GuDnXJSlmPz"
       },
-      "execution_count": 177,
+      "execution_count": 228,
       "outputs": []
     },
     {
@@ -984,7 +984,7 @@
       "metadata": {
         "id": "L2yifWLslpuX"
       },
-      "execution_count": 178,
+      "execution_count": 229,
       "outputs": []
     },
     {
@@ -1000,7 +1000,7 @@
       "metadata": {
         "id": "Bs8CViUWyGSF"
       },
-      "execution_count": 201,
+      "execution_count": 230,
       "outputs": []
     },
     {
@@ -1013,9 +1013,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZcSy-0Ibyou5",
-        "outputId": "8556ece3-4b37-4d65-ea58-49803b134cef"
+        "outputId": "6ad40a40-b7bd-4ed9-d303-a5a56d114b6a"
       },
-      "execution_count": 202,
+      "execution_count": 231,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1025,7 +1025,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 202
+          "execution_count": 231
         }
       ]
     },
@@ -1043,7 +1043,7 @@
       "metadata": {
         "id": "yPQCU88QwmHr"
       },
-      "execution_count": 203,
+      "execution_count": 232,
       "outputs": []
     },
     {
@@ -1065,7 +1065,7 @@
       "metadata": {
         "id": "sd2pU7gR3gYH"
       },
-      "execution_count": 205,
+      "execution_count": 234,
       "outputs": []
     },
     {
@@ -1075,12 +1075,12 @@
       ],
       "metadata": {
         "id": "fJjeEd2dOeCS",
-        "outputId": "66c79cbe-4f6a-41fc-b157-3c8e0dfd3052",
+        "outputId": "d9bd3161-d868-4d12-d607-5017e4c7cf1f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 206,
+      "execution_count": 235,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1090,7 +1090,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 206
+          "execution_count": 235
         }
       ]
     },
@@ -1101,12 +1101,12 @@
       ],
       "metadata": {
         "id": "kuAgfKVlQ1tA",
-        "outputId": "0735613a-28e3-4512-e521-03c4cb378f0e",
+        "outputId": "d7e6a072-7e10-47f9-879d-69921135efd3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 207,
+      "execution_count": 236,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1121,7 +1121,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 207
+          "execution_count": 236
         }
       ]
     },
@@ -1141,7 +1141,7 @@
       "metadata": {
         "id": "QFap7jlZ4Tg6"
       },
-      "execution_count": 92,
+      "execution_count": 237,
       "outputs": []
     },
     {
@@ -1153,7 +1153,7 @@
       "metadata": {
         "id": "Jsvf_hi247Fc"
       },
-      "execution_count": 208,
+      "execution_count": 238,
       "outputs": []
     },
     {
@@ -1174,15 +1174,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RdUt-LcnTxVl",
-        "outputId": "18d7bf9c-66f7-4b20-caa7-93e0f2b0fcf0"
+        "outputId": "429efe2b-695b-46d9-e5db-f4efb2cb3887"
       },
-      "execution_count": 209,
+      "execution_count": 239,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-3860067225.py:8: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '0.013857517247410026' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+            "/tmp/ipython-input-2041765854.py:8: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '0.013857517247410026' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
             "  df.at[idx, \"Tfidf_score\"] = score\n"
           ]
         }
@@ -1196,7 +1196,7 @@
       "metadata": {
         "id": "r5UFIWw3Xj0h"
       },
-      "execution_count": 215,
+      "execution_count": 240,
       "outputs": []
     },
     {
@@ -1206,13 +1206,13 @@
       ],
       "metadata": {
         "id": "-YpdB81Khaij",
-        "outputId": "cc52a2bd-2a1d-498d-b4a4-a0ff8bb86571",
+        "outputId": "dd7c3c4f-4f4a-4443-88a2-bc5ffd3edcdf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 634
         }
       },
-      "execution_count": 211,
+      "execution_count": 241,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1287,7 +1287,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-769eb762-76ce-433b-b25d-10f48779eabc\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-0002a497-8452-4ec2-a3f7-2163b407db80\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1505,7 +1505,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-769eb762-76ce-433b-b25d-10f48779eabc')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0002a497-8452-4ec2-a3f7-2163b407db80')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1557,12 +1557,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-769eb762-76ce-433b-b25d-10f48779eabc button.colab-df-convert');\n",
+              "        document.querySelector('#df-0002a497-8452-4ec2-a3f7-2163b407db80 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-769eb762-76ce-433b-b25d-10f48779eabc');\n",
+              "        const element = document.querySelector('#df-0002a497-8452-4ec2-a3f7-2163b407db80');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1582,8 +1582,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-271b16d1-4e20-44c4-becb-a65a4070fe6d\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-271b16d1-4e20-44c4-becb-a65a4070fe6d')\"\n",
+              "    <div id=\"df-0790e353-7787-4140-bd46-5852718b5331\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0790e353-7787-4140-bd46-5852718b5331')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1702,14 +1702,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-271b16d1-4e20-44c4-becb-a65a4070fe6d button');\n",
+              "            document.querySelector('#df-0790e353-7787-4140-bd46-5852718b5331 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_f652b6e2-5b90-4a7a-a173-58a941feb8d7\">\n",
+              "  <div id=\"id_4a619186-a8d2-4b9e-8017-3ec2ab85b0ce\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1753,7 +1753,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_f652b6e2-5b90-4a7a-a173-58a941feb8d7 button.colab-df-generate');\n",
+              "        document.querySelector('#id_4a619186-a8d2-4b9e-8017-3ec2ab85b0ce button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1774,7 +1774,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 211
+          "execution_count": 241
         }
       ]
     },
@@ -1785,22 +1785,22 @@
       ],
       "metadata": {
         "id": "gGxKFaWcXugB",
-        "outputId": "359b9532-f7e6-49b5-b9b8-da21dfb48ef0",
+        "outputId": "eb5ec395-00a5-407d-ac86-4ad3fd918e8b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 212,
+      "execution_count": 242,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<zip at 0x79a4da679880>"
+              "<zip at 0x79a4d9e53e00>"
             ]
           },
           "metadata": {},
-          "execution_count": 212
+          "execution_count": 242
         }
       ]
     },
@@ -1811,12 +1811,12 @@
       ],
       "metadata": {
         "id": "-1A0wnZPcisk",
-        "outputId": "dc74c574-a4b0-4408-e06e-e8524784bf97",
+        "outputId": "b60f52af-4ef9-4e72-a271-229309f24514",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 192,
+      "execution_count": 243,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1826,7 +1826,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 192
+          "execution_count": 243
         }
       ]
     },
@@ -1838,7 +1838,7 @@
       "metadata": {
         "id": "dl289B81mrCN"
       },
-      "execution_count": null,
+      "execution_count": 244,
       "outputs": []
     },
     {
@@ -1847,6 +1847,7 @@
         "# Cosine similarity\n",
         "\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.metrics.pairwise import cosine_similarity\n",
         "# turn seperated words into a string sentence in each corpus\n",
         "# corpus = [\" \".join(doc) for doc in corpus]\n",
         "# titles = labels\n",
@@ -1854,10 +1855,38 @@
         "# vectorizer = TfidfVectorizer(ngram_range=(1,1))\n",
         "# vector = vectorizer.fit_transform(corpus)\n",
         "# Since we have fit the vectorize before, we only need to transform it.\n",
+        "\n",
+        "X_positions = vectorizer.transform(df['position'])\n",
+        "similarity = cosine_similarity(X_positions, tfidf_df)\n",
+        "\n",
+        "import numpy as np\n",
+        "df[\"cosine_predict\"] = tfidf_df.index[similarity.argmax(axis = 1)]\n",
+        "df[\"cosine_ifidf_score\"] = similarity.max(axis = 1)\n",
+        "\n",
         "\n"
       ],
       "metadata": {
         "id": "7-gVceukmtLs"
+      },
+      "execution_count": 246,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.to_csv(\"/content/DataScienceCapstoneProject/Cosine-Position-Predict.csv\")"
+      ],
+      "metadata": {
+        "id": "JdpW18wZqKCX"
+      },
+      "execution_count": 248,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "dNMq77VlqRaQ"
       },
       "execution_count": null,
       "outputs": []
