--- a/RuleBased.ipynb
+++ b/RuleBased.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOE32Peax9K8Mrccf+9LwUy",
+      "authorship_tag": "ABX9TyPvQzovHLGERJNDaJFVu9Zh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 216,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 217,
+      "execution_count": null,
       "metadata": {
         "id": "JfWQb6pqP9sY"
       },
@@ -75,7 +75,7 @@
           "height": 867
         }
       },
-      "execution_count": 218,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -631,7 +631,7 @@
       "metadata": {
         "id": "F-I1bj_acJjJ"
       },
-      "execution_count": 219,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -647,7 +647,7 @@
           "height": 429
         }
       },
-      "execution_count": 220,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -761,7 +761,7 @@
       "metadata": {
         "id": "gAFUjLZodYqR"
       },
-      "execution_count": 221,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -777,7 +777,7 @@
         "id": "Ih0RkqHJz58j",
         "outputId": "15a272c2-5993-4729-ebde-3dcf176a6598"
       },
-      "execution_count": 222,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -803,7 +803,7 @@
       "metadata": {
         "id": "gS3j77cTnxIZ"
       },
-      "execution_count": 223,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -821,7 +821,7 @@
       "metadata": {
         "id": "pDvT9YlHfWYz"
       },
-      "execution_count": 224,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -832,7 +832,7 @@
       "metadata": {
         "id": "RlQCeYEfUNr3"
       },
-      "execution_count": 225,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -848,7 +848,7 @@
           "height": 458
         }
       },
-      "execution_count": 226,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -961,7 +961,7 @@
       "metadata": {
         "id": "C4_z6wcwj1-X"
       },
-      "execution_count": 227,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -972,7 +972,7 @@
       "metadata": {
         "id": "8GuDnXJSlmPz"
       },
-      "execution_count": 228,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -984,7 +984,7 @@
       "metadata": {
         "id": "L2yifWLslpuX"
       },
-      "execution_count": 229,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1000,7 +1000,7 @@
       "metadata": {
         "id": "Bs8CViUWyGSF"
       },
-      "execution_count": 230,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1015,7 +1015,7 @@
         "id": "ZcSy-0Ibyou5",
         "outputId": "6ad40a40-b7bd-4ed9-d303-a5a56d114b6a"
       },
-      "execution_count": 231,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1036,14 +1036,14 @@
         "# turn seperated words into a string sentence in each corpus\n",
         "corpus = [\" \".join(doc) for doc in corpus]\n",
         "titles = labels\n",
-        "\n",
-        "vectorizer = TfidfVectorizer(ngram_range=(1,1), lowercase=True)\n",
+        "# adjust the ngram_range to improve accuracy\n",
+        "vectorizer = TfidfVectorizer(ngram_range=(1,3), lowercase=True)\n",
         "vector = vectorizer.fit_transform(corpus)"
       ],
       "metadata": {
         "id": "yPQCU88QwmHr"
       },
-      "execution_count": 232,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1065,7 +1065,7 @@
       "metadata": {
         "id": "sd2pU7gR3gYH"
       },
-      "execution_count": 234,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1080,7 +1080,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 235,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1106,7 +1106,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 236,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1141,7 +1141,7 @@
       "metadata": {
         "id": "QFap7jlZ4Tg6"
       },
-      "execution_count": 237,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1153,7 +1153,7 @@
       "metadata": {
         "id": "Jsvf_hi247Fc"
       },
-      "execution_count": 238,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1176,7 +1176,7 @@
         "id": "RdUt-LcnTxVl",
         "outputId": "429efe2b-695b-46d9-e5db-f4efb2cb3887"
       },
-      "execution_count": 239,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1196,7 +1196,7 @@
       "metadata": {
         "id": "r5UFIWw3Xj0h"
       },
-      "execution_count": 240,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1212,7 +1212,7 @@
           "height": 634
         }
       },
-      "execution_count": 241,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1790,7 +1790,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 242,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1816,7 +1816,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 243,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1838,7 +1838,7 @@
       "metadata": {
         "id": "dl289B81mrCN"
       },
-      "execution_count": 244,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1868,7 +1868,7 @@
       "metadata": {
         "id": "7-gVceukmtLs"
       },
-      "execution_count": 246,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1879,7 +1879,7 @@
       "metadata": {
         "id": "JdpW18wZqKCX"
       },
-      "execution_count": 248,
+      "execution_count": null,
       "outputs": []
     },
     {
