--- a/RuleBasedDepartment.ipynb
+++ b/RuleBasedDepartment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNxURonE3eH81aGc1xWs0zy",
+      "authorship_tag": "ABX9TyOaUtYm0996mwBQ4d3JIY2G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,7 +87,7 @@
         "outputId": "4f589da1-7ccf-48d2-9124-18496e55279c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 676
+          "height": 867
         }
       },
       "execution_count": 6,
@@ -644,11 +644,11 @@
         "df.info()"
       ],
       "metadata": {
-        "id": "6tTea5K4oVjn",
-        "outputId": "2a624e9b-6168-4ae3-f31f-57b28e3c27f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6tTea5K4oVjn",
+        "outputId": "2a624e9b-6168-4ae3-f31f-57b28e3c27f9"
       },
       "execution_count": 9,
       "outputs": [
@@ -865,7 +865,7 @@
         "\n",
         "def split_position(text):\n",
         "  # add an empty space before capital letters\n",
-        "  text = re.sub(r'(?<!^)(?=[A-Z])', \" \", text)\n",
+        "  #text = re.sub(r'(?<!^)(?=[A-Z])', \" \", text)\n",
         "\n",
         "  # Lowercase and split on space, /, &, -\n",
         "  return re.split(r'[ /&-]+',text.lower().strip())"
@@ -873,7 +873,7 @@
       "metadata": {
         "id": "pDvT9YlHfWYz"
       },
-      "execution_count": 14,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -884,7 +884,7 @@
       "metadata": {
         "id": "RlQCeYEfUNr3"
       },
-      "execution_count": 15,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -894,23 +894,23 @@
       ],
       "metadata": {
         "id": "H6HLk2HnUPVg",
-        "outputId": "ba8c1b12-2376-4c6b-811c-e4166d773cd0",
+        "outputId": "eeb6a240-036c-4afb-f337-04121fdc4266",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 458
         }
       },
-      "execution_count": 16,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "0                                             [prokurist]\n",
-              "1                                               [c, f, o]\n",
+              "1                                                   [cfo]\n",
               "2                                        [betriebswirtin]\n",
               "3                                           [prokuristin]\n",
-              "4                                               [c, f, o]\n",
+              "4                                                   [cfo]\n",
               "                              ...                        \n",
               "2633                                          [justitiar]\n",
               "2634                                    [geschäftsführer]\n",
@@ -948,7 +948,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>[c, f, o]</td>\n",
+              "      <td>[cfo]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -960,7 +960,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>[c, f, o]</td>\n",
+              "      <td>[cfo]</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -993,7 +993,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 46
         }
       ]
     },
@@ -1870,12 +1870,12 @@
     {
       "cell_type": "code",
       "source": [
-        "df.to_csv(\"/content/DataScienceCapstoneProject/Cosine-Position-Predict.csv\")"
+        "df.to_csv(\"/content/DataScienceCapstoneProject/Cosine-Position-Predict.csv\",sep = \";\")"
       ],
       "metadata": {
         "id": "JdpW18wZqKCX"
       },
-      "execution_count": 32,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -1885,11 +1885,11 @@
       ],
       "metadata": {
         "id": "dNMq77VlqRaQ",
-        "outputId": "38300f3f-f2c9-429a-9189-2cbe6320318f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "38300f3f-f2c9-429a-9189-2cbe6320318f"
       },
       "execution_count": 33,
       "outputs": [
